스케줄 조회, 초대 목록 수정