@@ -4,18 +4,19 @@ import com.example.demo.domain.Schedule;
 import com.example.demo.dto.ScheduleRequest;
 import com.example.demo.dto.ScheduleResponse;
 import com.example.demo.service.ScheduleService;
-import com.example.demo.user.config.TokenProvider;
+import com.example.demo.service.ScheduleUserService;
 import lombok.AllArgsConstructor;
 import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 import io.swagger.v3.oas.annotations.Operation;
 
 import java.time.LocalDate;
 import java.time.LocalTime;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @AllArgsConstructor
@@ -23,39 +24,37 @@ import java.util.List;
 public class ScheduleController {
 
     private final ScheduleService scheduleService;
+    private final ScheduleUserService scheduleUserService;
+
+    private static String getAuthEmail(){
+        return SecurityContextHolder.getContext().getAuthentication().getName();
+    }
 
     @PostMapping
     @Operation(summary = "새 일정 생성", description = "새로운 일정을 생성한다.")
     public ResponseEntity<ScheduleResponse> create(
             @RequestBody ScheduleRequest request) {
-
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        String email = authentication.getName();
-
-        Schedule newSchedule = scheduleService.save(request, email);
+        Schedule newSchedule = scheduleService.save(request, getAuthEmail());
         return ResponseEntity.ok(ScheduleResponse.fromEntity(newSchedule));
     }
 
     @GetMapping
-    @Operation(summary="사용자 일정 전체 조회", description="사용자가 작성한 전체 일정을 조회한다.")
+    @Operation(summary = "사용자 일정 전체 조회", description = "사용자의 전체 일정을 조회한다.")
     public ResponseEntity<List<ScheduleResponse>> getAll(
-            @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate start_date,
-            @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate end_date) {
+            @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate startDate,
+            @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate endDate) {
 
-        List<Schedule> schedules;
-        String email = SecurityContextHolder.getContext().getAuthentication().getName();
-
-        // 날짜 필터가 있을 경우, 특정 기간 조회
-        if (start_date != null && end_date != null) {
-            schedules = scheduleService.findByDateRangeAndAuthor(start_date.atStartOfDay(), end_date.atTime(LocalTime.MAX), email);
-        } else {
-            // 필터가 없으면 전체 일정 조회
-            schedules = scheduleService.findAllByEmail(email);
-        }
+        String authEmail = getAuthEmail();
+        List<Schedule> schedules = (startDate != null && endDate != null)
+                ? scheduleService.findByDateRangeAndAuthor(startDate.atStartOfDay(), endDate.atTime(LocalTime.MAX), authEmail)
+                : scheduleService.findAllByEmail(authEmail);
 
         List<ScheduleResponse> responses = schedules.stream()
                 .map(ScheduleResponse::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
+
+        responses.addAll(scheduleUserService.getInvitedSchedules(authEmail));
+
         return ResponseEntity.ok(responses);
     }
 
@@ -69,16 +68,14 @@ public class ScheduleController {
     @PutMapping("/{scheduleId}")
     @Operation(summary="일정 수정", description="일정을 수정한다.")
     public ResponseEntity<ScheduleResponse> update(@PathVariable("scheduleId") Long scheduleId, @RequestBody ScheduleRequest request) {
-        String email = SecurityContextHolder.getContext().getAuthentication().getName();
-        Schedule schedule = scheduleService.update(scheduleId, request, email);
+        Schedule schedule = scheduleService.update(scheduleId, request, getAuthEmail());
         return ResponseEntity.ok(ScheduleResponse.fromEntity(schedule));
     }
 
     @DeleteMapping("/{scheduleId}")
     @Operation(summary="일정 삭제", description="일정을 삭제한다.")
     public ResponseEntity<ScheduleResponse> delete(@PathVariable("scheduleId") Long scheduleId) {
-        String email = SecurityContextHolder.getContext().getAuthentication().getName();
-        scheduleService.delete(scheduleId, email);
+        scheduleService.delete(scheduleId, getAuthEmail());
         return ResponseEntity.noContent().build();
     }
 }
